<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e5e3e3"
        android:layout_weight="0.92">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView6"
            android:id="@+id/textView6"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="60dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText14"
            android:hint="@string/editText14"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView7"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText15"
            android:hint="@string/editText15"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView8"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText16"
            android:hint="@string/editText16"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView9"
            android:id="@+id/textView9"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText17"
            android:hint="@string/editText17"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView10"
            android:id="@+id/textView10"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText18"
            android:hint="@string/editText18"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView11"
            android:id="@+id/textView11"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText19"
            android:hint="@string/editText19"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView12"
            android:id="@+id/textView12"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText20"
            android:hint="@string/editText20"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/textView13"
            android:id="@+id/textView13"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText21"
            android:hint="@string/editText21"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/borde"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar4"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:visibility="gone" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e5e3e3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button7_reserva"
            android:id="@+id/button7"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button8"
            android:id="@+id/button8"
            android:layout_alignBottom="@+id/button7"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>

</LinearLayout>



<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:context="com.bits.test.Reservas"-->
    <!--tools:showIn="@layout/activity_reservas">-->

<!--</RelativeLayout>-->
