<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bits.test.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_weight="0.32">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/imagen2"
                android:id="@+id/imageView" />

        </LinearLayout>

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminate="true"
            android:indeterminateBehavior="repeat"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.30">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:weightSum="1">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/textView2"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:text="@string/textview2"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:hint="@string/edittext"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.14" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/textview3"
                    android:id="@+id/textView3"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:layout_weight="0.14"
                    android:hint="@string/edittext2"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textview14"
                    android:id="@+id/textView14"
                    android:layout_marginTop="10dp"
                    android:textColor="#d70b0b"
                    android:layout_gravity="center"
                    android:layout_weight="0.20" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="34dp"
                    android:text="@string/ingresar"
                    android:id="@+id/button"
                    android:layout_gravity="bottom|center_horizontal"
                    android:soundEffectsEnabled="true"
                    android:textColor="#ffffff"
                    android:background="#16599c"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
